--- a/templates/404.html
+++ b/templates/404.html
@@ -67,7 +67,7 @@
         <i class="fas fa-exclamation-triangle icon"></i>
         <h1>404</h1>
         <p>Oops! The page you're looking for doesn't exist.</p>
-        <p><a href="/calculator">Go back to Home</a></p>
+        <p><a href="/home">Go back to Home</a></p>
     </div>
 </body>
 </html>
