--- a/templates/login.html
+++ b/templates/login.html
@@ -189,8 +189,8 @@
             <input type="hidden" name="next" value="{{ next }}">
             <button class="custom-btn"><i class="fa-solid fa-sign-in-alt"></i> Login</button>
         </form>
-        <a href="#" class="forgot-link"><i class="fa-solid fa-key"></i> Forgot Password?</a>
-        <a href="#" class="signup-link"><i class="fa-solid fa-user-plus"></i> Don't have an account? Sign Up</a>
+        <a href="/forgot-password" class="forgot-link"><i class="fa-solid fa-key"></i> Forgot Password?</a>
+        <a href="/signup" class="signup-link"><i class="fa-solid fa-user-plus"></i> Don't have an account? Sign Up</a>
 
         <div class="social-icons">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
