--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <script src="https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/profile.css">
 </head>
 
 <body>
@@ -175,7 +175,7 @@
       </symbol>
     </defs>
   </svg>
-  <script src="script.js"></script>
+  <script src="/scripts/profile.js"></script>
 </body>
 
 </html>
