--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,16 +25,16 @@
               <use xlink:href="#icon-location"></use>
             </svg>
           </span>
-          <span class="profile-card-loc__txt"> Philippines, Cavite</span>
+          <span class="profile-card-loc__txt"> Bangladesh, Dhaka</span>
         </div>
         <div class="profile-card-inf">
           <div class="profile-card-inf__item">
             <div class="profile-card-inf__title">Project</div>
-            <div class="profile-card-inf__txt">4</div>
+            <div class="profile-card-inf__txt">2</div>
           </div>
           <div class="profile-card-inf__item">
             <div class="profile-card-inf__title">Hobby</div>
-            <div class="profile-card-inf__txt">Guitar, Coding, Playing</div>
+            <div class="profile-card-inf__txt">sleeping, Coding, Playing</div>
           </div>
         </div>
         <div class="profile-card-social">
@@ -77,12 +77,6 @@
           <a href="/docs">
           <button
             class="profile-card__button button--blue js-message-btn">REST API</button>
-          </a>
-        </div>
-        <div class="profile-card-ctr">
-          <a href="https://www.npmjs.com/package/dekuai">
-          <button
-            class="profile-card__button button--blue js-message-btn">API PACKAGE</button>
           </a>
         </div>
       </div>
