--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Deku’s Profile</title>
+  <title>Shahariar’s Profile</title>
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <div class="profile-card js-profile-card">
       <div class="profile-card__img">
-        <img src="https://graph.facebook.com/100055943906136/picture?height=720&width=720&access_token=6628568379%7Cc1e620fa708a1d5696fb991c1bde5662" alt="profile card">
+        <img src="" alt="profile card">
       </div>
       <div class="profile-card__cnt js-profile-cnt">
         <div class="profile-card__name">Deku</div>
