--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,10 +15,10 @@
   <div class="wrapper">
     <div class="profile-card js-profile-card">
       <div class="profile-card__img">
-        <img src="" alt="profile card">
+        <img src="https://i.ibb.co.com/jJy6HWg/d7a4b46b-cee7-4766-aeab-ebf2a0a3eeb9.jpg" alt="profile card">
       </div>
       <div class="profile-card__cnt js-profile-cnt">
-        <div class="profile-card__name">Deku</div>
+        <div class="profile-card__name">Shahariar Mahfuz</div>
         <div class="profile-card-loc">
           <span class="profile-card-loc__icon">
             <svg class="icon">
