--- a/templates/get.html
+++ b/templates/get.html
@@ -123,7 +123,7 @@
                 <input type="text" id="url" name="url" required>
                 <button type="submit"><i class="fas fa-search"></i> Get Source</button>
             </form>
-            <a href="/"><i class="fas fa-home"></i> Go Back</a>
+            <a href="/source"><i class="fas fa-home"></i> Go Back</a>
         {% endif %}
     </div>
 
