--- a/templates/get.html
+++ b/templates/get.html
@@ -114,7 +114,7 @@
             <pre id="sourceCode">{{ source_code }}</pre>
             <p>Lines: {{ source_code.count('\n') + 1 }}</p> 
             <p>Words: {{ source_code | length }}</p> 
-            <a href="/get-source"><i class="fas fa-arrow-left"></i> Go Back</a>
+            <a href="/source"><i class="fas fa-arrow-left"></i> Go Back</a>
             <div id="notification" class="notification"><i class="fas fa-check-circle"></i> Source code copied to clipboard!</div> 
         {% else %}
             <h1>Get Source Code</h1>
@@ -123,7 +123,7 @@
                 <input type="text" id="url" name="url" required>
                 <button type="submit"><i class="fas fa-search"></i> Get Source</button>
             </form>
-            <a href="/source"><i class="fas fa-home"></i> Go Back</a>
+            <a href="/"><i class="fas fa-home"></i> Go Back</a>
         {% endif %}
     </div>
 
